update cv August 2023

--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
 
 		<!-- Generated from https://metatags.io -->
 		<!-- Primary Meta Tags -->
-		<title>Ojo Oluwasetemi's CV</title>
-		<meta name="title" content="Ojo Oluwasetemi's CV" />
+		<title>Oluwasetemi_Ojo_CV</title>
+		<meta name="title" content="Oluwasetemi_Ojo_CV" />
 		<meta name="description"
-			content="A Fullstack JavaScript(Node and React) developer with good technical background, with more than 4 years+ worth experience , self-discipline and good work ethic. Possess a deep love for Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST or Mocha by a Test Driven Development approach with continuous integration pipelines using Agile methodologies. Have worked with Nodejs, React, Gatsbyjs and Nextjs in production environment consistently. I can write Python and C# conveniently." />
+			content="A Fullstack TypeScript(Node and React) developer with good technical background, with more than 5 years+ worth experience, self-discipline and good work ethic. Possess a deep love for Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST or Mocha by a Test Driven Development approach with continuous integration pipelines using Agile methodologies to deliver products. Have worked with Nodejs, React, Gatsbyjs and Nextjs in production environment consistently. I can write Python and C# conveniently." />
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://cv.oluwasetemi.dev/" />
-		<meta property="og:title" content="Ojo Oluwasetemi's CV" />
+		<meta property="og:title" content="Oluwasetemi_Ojo_CV" />
 		<meta property="og:description"
-			content="A Fullstack JavaScript(Node and React) developer with good technical background, with more than 4 years+ worth experience , self-discipline and good work ethic. Possess a deep love for Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST or Mocha by a Test Driven Development approach with continuous integration pipelines using Agile methodologies. Have worked with Nodejs, React, Gatsbyjs and Nextjs in production environment consistently. I can write Python and C# conveniently." />
+			content="A Fullstack TypeScript(Node and React) developer with good technical background, with more than 5 years+ worth experience, self-discipline and good work ethic. Possess a deep love for Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST or Mocha by a Test Driven Development approach with continuous integration pipelines using Agile methodologies to deliver products. Have worked with Nodejs, React, Gatsbyjs and Nextjs in production environment consistently. I can write Python and C# conveniently." />
 		<meta property="og:image" content="https://avatars0.githubusercontent.com/u/10030028?v=3" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
 		<meta property="twitter:url" content="https://cv.oluwasetemi.dev/" />
-		<meta property="twitter:title" content="Ojo Oluwasetemi's CV" />
+		<meta property="twitter:title"
+			content="A Fullstack TypeScript(Node and React) developer with good technical background, with more than 5 years+ worth experience, self-discipline and good work ethic. Possess a deep love for Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST or Mocha by a Test Driven Development approach with continuous integration pipelines using Agile methodologies to deliver products. Have worked with Nodejs, React, Gatsbyjs and Nextjs in production environment consistently. I can write Python and C# conveniently." />
 		<meta property="twitter:description"
-			content="A Fullstack JavaScript(Node and React) developer with good technical background, with more than 4 years+ worth experience , self-discipline and good work ethic. Possess a deep love for Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST or Mocha by a Test Driven Development approach with continuous integration pipelines using Agile methodologies. Have worked with Nodejs, React, Gatsbyjs and Nextjs in production environment consistently. I can write Python and C# conveniently." />
+			content="A Fullstack TypeScript(Node and React) developer with good technical background, with more than 5 years+ worth experience, self-discipline and good work ethic. Possess a deep love for Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST or Mocha by a Test Driven Development approach with continuous integration pipelines using Agile methodologies to deliver products. Have worked with Nodejs, React, Gatsbyjs and Nextjs in production environment consistently. I can write Python and C# conveniently." />
 		<meta property="twitter:image" content="https://avatars0.githubusercontent.com/u/10030028?v=3" />
 
 		<link rel="dns-prefetch" href="https://avatars0.githubusercontent.com" />
@@ -43,10 +44,9 @@
 		</h2>
 
 		<div class="info">
-			<!-- <p class="address">
-                BQ HBLK 074, Opposite Estate Unit, UCH Quarters, UCH, Ibadan,
-                Oyo State.
-            </p> -->
+			<p class="address">
+				2 Spathodia Avenue, Mona Heights, Kingston Jamaica.
+			</p>
 			<p class="country">Nationality: Nigerian.</p>
 			<!-- <p class="dob">Date of birth: 12th of February, 1993.</p> -->
 			<p class="info-contact">
@@ -143,13 +143,13 @@
 			<h3>Personal Information</h3>
 			<p>
 				A Fullstack JavaScript/TypeScript(Node and React) engineer with good technical background, with
-				<a href="https://oluwasetemi.dev/portfolio">4 years+ worth of experience</a> working at small to mid sized
+				<a href="https://oluwasetemi.dev/portfolio">5 years+ worth of experience</a> working at small to mid sized
 				startups. I am driven by my love for
 				building software products and have good leadership experience leading engineering teams. Have worked with
 				cutting edge web
 				technologies like <b>React</b> and <b>GraphQL</b> to build
 				software products that are tested using <b>JEST or Mocha</b> by
-				a <b>Test Driven Development</b> approach using <b>Agile methodologies</b>. Have
+				<b>Test Driven Development</b> approach using <b>Agile methodologies</b> to deliver quality softwares. Have
 				worked with <b>TypeScript</b>, <b>Nodejs</b>, <b>React</b>, <b>Gatsbyjs</b> and
 				<b>Nextjs</b> in production environment consistently. I write
 				<b>Python</b> conveniently.
@@ -179,19 +179,19 @@
 				<h3>Work Experience</h3>
 				<div class="each-experience">
 					<h4>
-						<a href="https://www.fitnessfairng.com/">TalentQL(https://fluna.co)</a> – (January, 2022
-						– Present) – Remote Full Stack Engineer.
+						<a href="https://www.fluna.co/">Fluna (https://fluna.co)</a> – (January, 2022
+						– Present) – Senior Full Stack Engineer.
 					</h4>
 					<article>
 						<p>
-							I work with AWS (some of the services include Amplify, cloud formation templates, lambda, cloud front, app
-							sync,
-							dynamodb, Aurora, API gateway), building backend APIs and database architecture.
+							I work with AWS (services include Amplify, Cloud formation templates, Lambda, AppSync,
+							Dynamodb, Aurora RDS, API gateway), building backend APIs and database architecture.
 						</p>
 					</article>
 					<article>
 						<p>
-							Work with ReactJS, TypeScript, JavaScript , NodeJS and GraphQL on the frontend.
+							Work with ReactJS, TypeScript, JavaScript, NodeJS and GraphQL on the frontend. I implemented the Testing
+							Infrasture to ensure quality software delivery.
 						</p>
 					</article>
 					<!-- <article>
@@ -204,7 +204,7 @@
 				</div>
 				<div class="each-experience">
 					<h4>
-						<a href="https://www.fitnessfairng.com/">FITNESS FAIR</a> – (January, 2020
+						<a href="#">Individual Contractor</a> – (January, 2020
 						– December, 2021) – Remote JavaScript Developer.
 					</h4>
 					<article>
